--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^4.6.0",
     "express": "^4.17.1",
     "isomorphic-unfetch": "^3.1.0",
+    "js-cookie": "^2.2.1",
     "next": "^10.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
