Added actual grid and leave room logic.  Added esliint command but prettier needs to be fixed.

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "node server.js",
     "build": "next build",
+    "dev": "node server.js",
+    "lint": "eslint ./modules ./pages",
     "start": "NODE_ENV=production node server.js"
   },
   "engines": {
