--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
+    "react-recipes": "^1.1.1",
     "sass": "^1.32.11",
     "socket.io": "^4.0.1",
     "socket.io-client": "^4.0.1"
