--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "next build",
     "dev": "node server.js",
-    "lint": "eslint ./modules ./pages",
+    "lint": "eslint ./modules",
     "start": "NODE_ENV=production node server.js"
   },
   "engines": {
