--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "isomorphic-unfetch": "^3.1.0",
     "js-cookie": "^2.2.1",
     "next": "^10.2.0",
+    "party-js": "2.0.0-0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
