--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "bootstrap": "^4.6.0",
+    "cookie": "^0.4.1",
     "express": "^4.17.1",
     "isomorphic-unfetch": "^3.1.0",
     "js-cookie": "^2.2.1",
