--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "bootstrap": "^4.6.0",
     "cookie": "^0.4.1",
+    "emoji-js": "^3.5.0",
     "express": "^4.17.1",
     "isomorphic-unfetch": "^3.1.0",
     "js-cookie": "^2.2.1",
@@ -26,6 +27,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
+    "react-linkify": "^1.0.0-alpha",
     "react-recipes": "^1.1.1",
     "sass": "^1.32.11",
     "socket.io": "^4.0.1",
@@ -40,6 +42,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.23.2",
+    "file-loader": "^6.2.0",
     "prettier": "^2.2.1"
   }
 }
