--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
     "bootstrap": "^4.6.0",
     "cookie": "^0.4.1",
     "emoji-js": "^3.5.0",
+    "eslint-config-next": "^13.1.1",
     "express": "^4.17.1",
     "isomorphic-unfetch": "^3.1.0",
     "js-cookie": "^2.2.1",
-    "next": "^10.2.0",
+    "next": "^13.1.1",
     "party-js": "2.0.0-0",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-bootstrap": "^1.5.2",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-linkify": "^1.0.0-alpha",
     "react-recipes": "^1.1.1",
     "sass": "^1.32.11",
