adding a switch, changing words

--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "isomorphic-unfetch": "^3.1.0",
     "js-cookie": "^2.2.1",
     "next": "^13.1.1",
-    "party-js": "2.0.0-0",
+    "party-js": "^2.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^18.2.0",
     "react-linkify": "^1.0.0-alpha",
-    "react-recipes": "^1.1.1",
+    "react-recipes": "^1.4.0",
     "sass": "^1.32.11",
     "sharp": "^0.31.3",
     "socket.io": "^4.0.1",
